@@ -89,14 +89,6 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <!-- The Kudu test utilities install a fake DNS through reflection -->
-          <argLine>-Djava.net.preferIPv4Stack=true --add-opens java.base/java.net=ALL-UNNAMED</argLine>
-        </configuration>
-      </plugin>
-      <plugin>
         <groupId>org.apache.avro</groupId>
         <artifactId>avro-maven-plugin</artifactId>
         <executions>
